# OverEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
overeditor/: CMakeLists.txt
overeditor/include/overeditor/: application.h  overeditor_constants.h
overeditor/include/overeditor/ecs/components/: common.h
overeditor/include/overeditor/ecs/systems/: rendering.h
overeditor/include/overeditor/graphics/: common.h  descriptors.h  device_context.h  image_context.h  querying.h  queue_context.h  queue_families.h  renderer.h  requirements.h  swapchain_context.h
overeditor/include/overeditor/graphics/buffers/: vertices.h
overeditor/include/overeditor/graphics/shaders/: graphics_pipeline.h  shader.h
overeditor/include/overeditor/ui/: panel.h  rect.h
overeditor/include/overeditor/utility/: collection_utility.h  memory_layout.h  memory_utility.h  singletons.h  step_function.h  string_utility.h  success_status.h  vulkan_utility.h
overeditor/res/shaders/: common.glsl  standart.vert
overeditor/src/overeditor/: application.cpp  overeditor.cpp
overeditor/src/overeditor/ecs/components/: common.cpp
overeditor/src/overeditor/ecs/systems/: rendering.cpp
overeditor/src/overeditor/graphics/: descriptors.cpp  device_context.cpp  image_context.cpp  querying.cpp  queue_context.cpp  queue_families.cpp  requirements.cpp  swapchain_context.cpp
overeditor/src/overeditor/graphics/buffers/: vertices.cpp
overeditor/src/overeditor/graphics/shaders/: graphics_pipeline.cpp  shader.cpp
overeditor/src/overeditor/utility/: memory_layout.cpp  vulkan_utility.cpp
